Update Google Analytics

--- a/views/portfolio/guidelines.html
+++ b/views/portfolio/guidelines.html
@@ -2,36 +2,22 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119969569-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-119969569-1');
+  </script>
+
+
   <title> Matthew Alcorn | Design Guidelines </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="../../css/site.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,300i" rel="stylesheet">
-
-  <!-- Piwik -->
-  <script type="text/javascript">
-    var _paq = _paq || [];
-    _paq.push(['trackPageView']);
-    _paq.push(['enableLinkTracking']);
-    (function() {
-      var u = "//mattalcorn.com/piwik/";
-      _paq.push(['setTrackerUrl', u + 'piwik.php']);
-      _paq.push(['setSiteId', 1]);
-      var d = document,
-        g = d.createElement('script'),
-        s = d.getElementsByTagName('script')[0];
-      g.type = 'text/javascript';
-      g.async = true;
-      g.defer = true;
-      g.src = u + 'piwik.js';
-      s.parentNode.insertBefore(g, s);
-    })();
-  </script>
-  <noscript>
-    <p><img src="//mattalcorn.com/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p>
-  </noscript>
-  <!-- End Piwik Code -->
-
 </head>
 
 <body>
@@ -53,9 +39,15 @@
       <div class="collapse navbar-collapse navHeaderCollapse">
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="../../index.html">HOME</a></li>
-          <li class="active"><a href="../portfolio.html">PORTFOLIO</a></li>
-          <li><a href="../resume.html">RESUME</a></li>
+          <li>
+            <a href="../../index.html">HOME</a>
+          </li>
+          <li class="active">
+            <a href="../portfolio.html">PORTFOLIO</a>
+          </li>
+          <li>
+            <a href="../resume.html">RESUME</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -68,7 +60,11 @@
     <div class="row">
       <h3> OVERVIEW </h3>
       <div class="col-md-12">
-        <p>This page contains my thoughts and ideologies surrounding User Experience. When I design interfaces and interactions, these are some of the things I take into consideration. I've taken this knowledge and combined it with other fundamental elements of this site to create a sample set of Design Guidelines. I believe it's important for every project to have a document similar to this available as reference material. Through resources like this, knowledge is built and shared.</p>
+        <p>This page contains my thoughts and ideologies surrounding User Experience. When I design interfaces and interactions,
+          these are some of the things I take into consideration. I've taken this knowledge and combined it with other fundamental
+          elements of this site to create a sample set of Design Guidelines. I believe it's important for every project to
+          have a document similar to this available as reference material. Through resources like this, knowledge is built
+          and shared.</p>
       </div>
     </div>
 
@@ -109,29 +105,46 @@
       <h3> ICONOGRAPHY </h3>
       <div class="col-md-12">
         <h4>OVERVIEW OF ICONOGRAPHY</h4>
-        <p>A picture is worth a thousand words. Icons can communicate so much in a small amount of space. While it is not the primary function of icons, they provide depth and character to a user interface. In this section, I'll discuss the primary types
-          of icons I like to use as well as my recommendations around icon creation.</p>
-        <h5><b>GLYPHS</b></h5>
-        <p>Glyphs are 24x24 pixel icons that are commonly used in tables and grids (to represent actions), and smaller side navigation menus. Glyphs are small enough to be used in these places, but large enough for touch interfaces.</p>
-        <h5><b>ICONS</b></h5>
+        <p>A picture is worth a thousand words. Icons can communicate so much in a small amount of space. While it is not the
+          primary function of icons, they provide depth and character to a user interface. In this section, I'll discuss
+          the primary types of icons I like to use as well as my recommendations around icon creation.</p>
+        <h5>
+          <b>GLYPHS</b>
+        </h5>
+        <p>Glyphs are 24x24 pixel icons that are commonly used in tables and grids (to represent actions), and smaller side
+          navigation menus. Glyphs are small enough to be used in these places, but large enough for touch interfaces.</p>
+        <h5>
+          <b>ICONS</b>
+        </h5>
         <p>Icons are 32x32 pixels or 64x64 pixels. Icons are commonly used to give a page or header context.</p>
         <br>
         <h4>ICON DESIGN PRINCIPLES</h4>
-        <p>Icons should always follow the following three principles. These principles are the cornerstone for creating useful and attractive icons.</p>
-        <h5><b>OBVIOUS</b></h5>
-        <p>First and foremost, an icon should be obvious. Icons should not be confusing, overly detailed, or out of context when used in an interface. Research common metaphors and similar icons when designing icons.</p>
-        <h5><b>APPROACHABLE</b></h5>
+        <p>Icons should always follow the following three principles. These principles are the cornerstone for creating useful
+          and attractive icons.</p>
+        <h5>
+          <b>OBVIOUS</b>
+        </h5>
+        <p>First and foremost, an icon should be obvious. Icons should not be confusing, overly detailed, or out of context
+          when used in an interface. Research common metaphors and similar icons when designing icons.</p>
+        <h5>
+          <b>APPROACHABLE</b>
+        </h5>
         <p>
-          Icons should be friendly and inviting. Create an approachable icon by balancing colors, shapes, and weights. The Golden Ratio is an underated concept in icon creation - refer to it often.
+          Icons should be friendly and inviting. Create an approachable icon by balancing colors, shapes, and weights. The Golden Ratio
+          is an underated concept in icon creation - refer to it often.
         </p>
-        <h5><b>TIMELESS</b></h5>
+        <h5>
+          <b>TIMELESS</b>
+        </h5>
         <p>
-          Icons should not need to be updated every time a design pattern or design philosophy changes. The should not follow trends in the industry - this prevents icons from needing constant revisions and updates.
+          Icons should not need to be updated every time a design pattern or design philosophy changes. The should not follow trends
+          in the industry - this prevents icons from needing constant revisions and updates.
         </p>
         <br>
         <h4>CONSTRUCTING AN ICON</h4>
         <p>
-          Icons should be created with simple two-dimensional geometric shapes. Icons can be monochromatic or contain more than one color.
+          Icons should be created with simple two-dimensional geometric shapes. Icons can be monochromatic or contain more than one
+          color.
         </p>
         <div class="col-sm-12 text-center">
           <img src="../../images/design_guidelines/construction.png" alt="" />
@@ -144,17 +157,20 @@
     <div class="row">
       <h3> TYPOGRAPHY </h3>
       <div class="col-md-12">
-      <h4>OVERVIEW OF TYPOGRAPHY</h4>
-      <p>Merriweather Sans is the primary typeface for this site. It's a clean font but still has a certain level of charm and character.</p>
-      <br>
-      <h4>PRIMARY TYPEFACE</h4>
-      <div class="col-sm-6 text-center">
-        <h1>Merriweather Sans</h1>
+        <h4>OVERVIEW OF TYPOGRAPHY</h4>
+        <p>Merriweather Sans is the primary typeface for this site. It's a clean font but still has a certain level of charm
+          and character.</p>
+        <br>
+        <h4>PRIMARY TYPEFACE</h4>
+        <div class="col-sm-6 text-center">
+          <h1>Merriweather Sans</h1>
+        </div>
+        <div class="col-sm-6 text-center">
+          <h1>
+            <i>Merriweather Sans Italic</i>
+          </h1>
+        </div>
       </div>
-      <div class="col-sm-6 text-center">
-        <h1><i>Merriweather Sans Italic</i></h1>
-      </div>
-    </div>
     </div>
 
     <br>
@@ -162,14 +178,35 @@
     <div class="row">
       <h3> INTERACTION DESIGN </h3>
       <div class="col-md-12">
-        <p>Interaction design encompasses the idea of "how a user will interact with a user interface." There are many fundamental concepts within this area of study - these are my primary considerations when designing an interface.</p>
+        <p>Interaction design encompasses the idea of "how a user will interact with a user interface." There are many fundamental
+          concepts within this area of study - these are my primary considerations when designing an interface.</p>
         <ul>
-          <li><b>Don't allow the user to perform an action that you know will fail</b> - This involves preventing the user from initiating an action or sequence that, deterministically, we know that preconditions or other dependencies are not met.</li>
-          <li><b>If an error occurs, recover gracefully</b> - It's not wrong for errors to occur (within reason), but when an error occurs, always explain (to the best of our ability) what happened and if any recovery steps are needed. Leaving the user in the lurch after an error occurs is not a positive experience.</li>
-          <li><b>Always show progress</b> - The average user expects an action to be responded to in just 0.3 seconds - likewise, they expect to be constantly informed on the status of their request. If possible, show an approximate indication on when lengthy actions will be complete. If this information can't be determined, it is appropriate to show a generic spinner to indicate a running action.</li>
-          <li><b>Use colors and shapes wisely - don't mix metaphors</b> - Consider the context of your application or function when choosing an icon or colors. For example, in a systems management environment, users have been trained to know that the "yellow triangle" indicates a warning - in this context, it would not be appropriate to use these items to represent something else.</li>
-          <li><b>Thoughtfully and strategically size and place elements</b> - Users nowadays can use any number of paradigms for accessing applications (phones, tablets, laptops, etc). An interface should be thoughtfully designed, taking into consideration these different devices and user interactions.</li>
-          <li><b>Research metaphors</b> - Icons should be carefully reviewed before adding them into a product. Many metaphors such as hand gestures, the eye, certain geometric shapes may be fine in certain cultures but in others they could be offensive or have religious connotations.</li>
+          <li>
+            <b>Don't allow the user to perform an action that you know will fail</b> - This involves preventing the user from
+            initiating an action or sequence that, deterministically, we know that preconditions or other dependencies are
+            not met.</li>
+          <li>
+            <b>If an error occurs, recover gracefully</b> - It's not wrong for errors to occur (within reason), but when an
+            error occurs, always explain (to the best of our ability) what happened and if any recovery steps are needed.
+            Leaving the user in the lurch after an error occurs is not a positive experience.</li>
+          <li>
+            <b>Always show progress</b> - The average user expects an action to be responded to in just 0.3 seconds - likewise,
+            they expect to be constantly informed on the status of their request. If possible, show an approximate indication
+            on when lengthy actions will be complete. If this information can't be determined, it is appropriate to show
+            a generic spinner to indicate a running action.</li>
+          <li>
+            <b>Use colors and shapes wisely - don't mix metaphors</b> - Consider the context of your application or function
+            when choosing an icon or colors. For example, in a systems management environment, users have been trained to
+            know that the "yellow triangle" indicates a warning - in this context, it would not be appropriate to use these
+            items to represent something else.</li>
+          <li>
+            <b>Thoughtfully and strategically size and place elements</b> - Users nowadays can use any number of paradigms for
+            accessing applications (phones, tablets, laptops, etc). An interface should be thoughtfully designed, taking
+            into consideration these different devices and user interactions.</li>
+          <li>
+            <b>Research metaphors</b> - Icons should be carefully reviewed before adding them into a product. Many metaphors
+            such as hand gestures, the eye, certain geometric shapes may be fine in certain cultures but in others they could
+            be offensive or have religious connotations.</li>
         </ul>
       </div>
     </div>
@@ -179,11 +216,17 @@
     <div class="row">
       <h3> ACCESSIBILITY </h3>
       <div class="col-md-12">
-        <p>Accessibility is often overlooked when designing an interface. Below are a few of the things I've learned over the years and are items I reference when creating interfaces.</p>
+        <p>Accessibility is often overlooked when designing an interface. Below are a few of the things I've learned over the
+          years and are items I reference when creating interfaces.</p>
         <ul>
-          <li><b>Color blindess</b> - Don't rely on color alone to convey a message or a status. Always use at least two deterministic factors when relaying information.</li>
-          <li><b>Utilize colons</b> - When using static text labels in a table or grid, end the label with a colon. This will help users with screen readers determine where the label ends and data begins.</li>
-          <li><b>Keyboard focus</b> - Start keyboard focus at the first actionable element on the page or dialog.</li>
+          <li>
+            <b>Color blindess</b> - Don't rely on color alone to convey a message or a status. Always use at least two deterministic
+            factors when relaying information.</li>
+          <li>
+            <b>Utilize colons</b> - When using static text labels in a table or grid, end the label with a colon. This will
+            help users with screen readers determine where the label ends and data begins.</li>
+          <li>
+            <b>Keyboard focus</b> - Start keyboard focus at the first actionable element on the page or dialog.</li>
         </ul>
       </div>
     </div>
