--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -2,6 +2,17 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119969569-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-119969569-1');
+  </script>
+
+
   <title> Matthew Alcorn | Portfolio </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -29,9 +40,15 @@
       <div class="collapse navbar-collapse navHeaderCollapse">
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="../index.html">HOME</a></li>
-          <li class="active"><a href="#">PORTFOLIO</a></li>
-          <li><a href="resume.html">RESUME</a></li>
+          <li>
+            <a href="../index.html">HOME</a>
+          </li>
+          <li class="active">
+            <a href="#">PORTFOLIO</a>
+          </li>
+          <li>
+            <a href="resume.html">RESUME</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -49,7 +66,7 @@
               <h4 class="text-center">Lenovo XClarity Mobile</h4>
               <p>A new approach to mobile systems management</p>
             </div>
-            </a>
+          </a>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
@@ -60,7 +77,7 @@
               <h4 class="text-center">Lenovo XClarity Administrator</h4>
               <p>A comprehensive systems management application</p>
             </div>
-            </a>
+          </a>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
@@ -71,7 +88,7 @@
               <h4 class="text-center">IBM FSM Mobile</h4>
               <p>The original server management app - reimagined for the future</p>
             </div>
-            </a>
+          </a>
         </div>
       </div>
     </div>
@@ -87,7 +104,7 @@
               <h4 class="text-center">Cordova & SSL Certificates</h4>
               <p>A post from my time at IBM on how to handle certs. when working with Cordova</p>
             </div>
-            </a>
+          </a>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
@@ -98,7 +115,7 @@
               <h4 class="text-center">Design Guidelines</h4>
               <p>A culmination of my design fundamentals, ideologies, and processes</p>
             </div>
-            </a>
+          </a>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
@@ -109,7 +126,7 @@
               <h4 class="text-center">Bronto Designs</h4>
               <p>Concepts and ideas for a project management dashboard</p>
             </div>
-            </a>
+          </a>
         </div>
       </div>
     </div>
