--- a/views/portfolio/bronto.html
+++ b/views/portfolio/bronto.html
@@ -2,28 +2,22 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119969569-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-119969569-1');
+  </script>
+
+
   <title> Matthew Alcorn | Bronto Designs </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="../../css/site.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,300i" rel="stylesheet">
-
-  <!-- Piwik -->
-  <script type="text/javascript">
-    var _paq = _paq || [];
-    _paq.push(['trackPageView']);
-    _paq.push(['enableLinkTracking']);
-    (function() {
-      var u="//mattalcorn.com/piwik/";
-      _paq.push(['setTrackerUrl', u+'piwik.php']);
-      _paq.push(['setSiteId', 1]);
-      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-      g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-    })();
-  </script>
-  <noscript><p><img src="//mattalcorn.com/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
-  <!-- End Piwik Code -->
-
 </head>
 
 <body>
@@ -45,23 +39,32 @@
       <div class="collapse navbar-collapse navHeaderCollapse">
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="../../index.html">HOME</a></li>
-          <li class="active"><a href="../portfolio.html">PORTFOLIO</a></li>
-          <li><a href="../resume.html">RESUME</a></li>
+          <li>
+            <a href="../../index.html">HOME</a>
+          </li>
+          <li class="active">
+            <a href="../portfolio.html">PORTFOLIO</a>
+          </li>
+          <li>
+            <a href="../resume.html">RESUME</a>
+          </li>
         </ul>
       </div>
     </div>
   </div>
 
   <div class="container page-container">
-  <h1 class="text-center">Bronto Designs</h1>
+    <h1 class="text-center">Bronto Designs</h1>
     <div class="row">
       <h3> OVERVIEW </h3>
       <div class="col-md-12">
-        <p>I interviewed with Bronto Software and as part of the final steps in the interview process, I was given an open ended design assignment to complete. The assignment was to create a dashboard and messaging page for an internal Service
-          and Support application. The overall style of the pages were influenced by research I did on Bronto's current software offerings. The color palatte used in my designs was inherited from other Bronto apps. Certain metaphors such as the "plus"
-          icon and the "x" icon when creating and canceling a project were inherited from other Bronto apps. Given the small amount of allotted time, the concepts below are what I would consider a "first pass" - they have been unaltered from what I submitted
-          during the interview process.</p>
+        <p>I interviewed with Bronto Software and as part of the final steps in the interview process, I was given an open ended
+          design assignment to complete. The assignment was to create a dashboard and messaging page for an internal Service
+          and Support application. The overall style of the pages were influenced by research I did on Bronto's current software
+          offerings. The color palatte used in my designs was inherited from other Bronto apps. Certain metaphors such as
+          the "plus" icon and the "x" icon when creating and canceling a project were inherited from other Bronto apps. Given
+          the small amount of allotted time, the concepts below are what I would consider a "first pass" - they have been
+          unaltered from what I submitted during the interview process.</p>
       </div>
     </div>
 
@@ -70,9 +73,12 @@
     <div class="row">
       <h3> DASHBOARD VIEW </h3>
       <div class="col-md-12">
-        <p>The Dashboard Tab was considered the landing page for the service app. It provided a notification counter, the ability to search projects, and a overall view of projects in progress. The project cards were used to give at-a-glance information
-          such as tasks, notifications, and alerts for current projects. Navigation for the app follows a standard left-hand tabbed interface with a subtle layering and coloring effect that distinguishes the active tab from the inactive tabs. The user's
-          name is provided at the top right of the page - this name is a dropdown allowing the user to access settings and the ability to logout.
+        <p>The Dashboard Tab was considered the landing page for the service app. It provided a notification counter, the ability
+          to search projects, and a overall view of projects in progress. The project cards were used to give at-a-glance
+          information such as tasks, notifications, and alerts for current projects. Navigation for the app follows a standard
+          left-hand tabbed interface with a subtle layering and coloring effect that distinguishes the active tab from the
+          inactive tabs. The user's name is provided at the top right of the page - this name is a dropdown allowing the
+          user to access settings and the ability to logout.
         </p>
       </div>
       <div class="col-md-12">
@@ -85,19 +91,19 @@
     <div class="row">
       <h3> MESSAGES VIEW </h3>
       <div class="col-md-12">
-        <p>The Messages Tab is used for conversing with clients and other members of a particular project. It allows attachments and documents to be sent between users. When sending a message, names are pre-populated based on members in the respective project.
-          I used a conversation-style messaging style with an inline reader/editor when creating this page. By using an inline editor, we're able to allow fast and cohesive context switching - coupling this with a smooth open/close animation delivers
-          an enjoyable experience to the user. Messages that are new/unread appear in a bold font with a small blue indicator. Messages that have been read would appear in a standard font with not indicator.
+        <p>The Messages Tab is used for conversing with clients and other members of a particular project. It allows attachments
+          and documents to be sent between users. When sending a message, names are pre-populated based on members in the
+          respective project. I used a conversation-style messaging style with an inline reader/editor when creating this
+          page. By using an inline editor, we're able to allow fast and cohesive context switching - coupling this with a
+          smooth open/close animation delivers an enjoyable experience to the user. Messages that are new/unread appear in
+          a bold font with a small blue indicator. Messages that have been read would appear in a standard font with not
+          indicator.
         </p>
       </div>
       <div class="col-md-12">
         <img class="img-responsive" src="../../images/bronto/messages.png" alt="" />
       </div>
     </div>
-
-    <br>
-    <br>
-
 </body>
 
 </html>
