Resume page formatting

--- a/views/resume.html
+++ b/views/resume.html
@@ -52,7 +52,7 @@
       </div>
     </div>
   </div>
-  <div style="width: 1000px;" class="container page-container">
+  <div class="container page-container">
     <div class="row text-center">
       <a target="_blank" href="../files/alcorn_resume.pdf" class="btn btn-lg mra-primary-action" role="button">DOWNLOAD .PDF VERSION (41KB)</a>
     </div>
