a few style updates

--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -17,7 +17,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="../css/site.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,300i" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,500;1,300&display=swap" rel="stylesheet">
+  <link href="../../libs/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
 
@@ -47,7 +50,9 @@
             <a href="#">PORTFOLIO</a>
           </li>
           <li>
-            <a href="resume.html">RESUME</a>
+            <a target="_blank" href="../files/alcorn_resume.pdf">RESUME
+              <i class="fa fa-external-link mra-resume-link-icon" aria-hidden="true"></i>
+            </a>
           </li>
         </ul>
       </div>
@@ -55,8 +60,7 @@
   </div>
 
   <div class="container">
-    <h2>WORK</h2>
-    <hr>
+    <h3 class="portfolio-header">COMPANY PROJECTS</h3>
     <div class="row">
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail mra-portfolio-card">
@@ -93,8 +97,7 @@
       </div>
     </div>
 
-    <h2>OTHER</h2>
-    <hr>
+    <h3 class="portfolio-header">PERSONAL PROJECTS</h3>
     <div class="row">
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail mra-portfolio-card">
