--- a/scss/site.scss
+++ b/scss/site.scss
@@ -10,23 +10,23 @@ $font: 'Merriweather Sans';
 
 // Overridden defaults
 // *** focus inputs
-$state-danger-text: $mra-red !default;
-$input-border-focus: $mra-blue !default;
+$state-danger-text: $mra-red  !default;
+$input-border-focus: $mra-blue  !default;
 // *** alerts
-$state-success-text: $mra-green !default;
+$state-success-text: $mra-green  !default;
 $state-success-bg: lighten($mra-green, 50%) !default;
 $state-success-border: darken($state-success-bg, 20%) !default;
 $state-danger-bg: lighten($mra-red, 33%) !default;
 $state-danger-border: darken($state-danger-bg, 20%) !default;
 // *** navbar
-$navbar-default-color: $mra-blue !default;
-$navbar-default-bg: $mra-blue !default;
+$navbar-default-color: $mra-blue  !default;
+$navbar-default-bg: $mra-blue  !default;
 $navbar-default-link-color: white !default;
 $navbar-default-link-hover-color: white !default;
 $navbar-default-link-active-color: white !default;
 $navbar-default-link-hover-bg: darken($navbar-default-bg, 5%) !default;
 $navbar-default-link-active-bg: darken($navbar-default-bg, 10%) !default;
-$navbar-default-border: $navbar-default-bg !default;
+$navbar-default-border: $navbar-default-bg  !default;
 $navbar-default-brand-hover-color: white !default;
 $navbar-default-toggle-hover-bg: darken($navbar-default-bg, 5%) !default;
 $navbar-default-toggle-border-color: white !default;
@@ -34,37 +34,53 @@ $navbar-default-toggle-icon-bar-bg: white !default;
 // *** thumbnail
 $thumbnail-padding: 14px !default;
 // Thumbnail border color
-$thumbnail-border: $border-color !default;
+$thumbnail-border: $border-color  !default;
 // Thumbnail border radius
 $thumbnail-border-radius: 3px !default;
 // Padding around the thumbnail caption
 $thumbnail-caption-padding: 9px !default;
 @import "_bootstrap.scss";
+
 body {
   background-color: #eee;
 }
+
 a {
   font-family: $font, sans-serif !important;
   font-weight: $font-weight;
   text-decoration: none !important;
 }
+
 hr {
   border-color: $border-color;
 }
-h4,h3 {
+
+h4,
+h3 {
   font-family: $font, sans-serif !important;
   font-weight: $font-weight;
   color: $mra-red;
 }
-h1,h2 {
+
+.portfolio-header {
+  font-weight: 500;
+  color: #555;
+  margin-bottom: 2rem
+}
+
+
+h1,
+h2 {
   font-family: $font, sans-serif !important;
   font-weight: $font-weight;
   color: $medium-gray;
 }
+
 p,
 div {
   font-family: $font, sans-serif !important;
   font-weight: $font-weight;
+
   &.homecard {
     font-size: 135%;
     padding-left: 5%;
@@ -75,6 +91,7 @@ div {
 .text-center {
   text-align: center;
 }
+
 .page-container {
   background-color: white;
   padding: 20px 40px 20px 40px;
@@ -85,10 +102,12 @@ div {
   margin-top: 35px;
   margin-bottom: 35px;
 }
+
 .mra-homepage-background {
   background: #efefef;
   background-image: url("../images/seigaiha.png");
 }
+
 .mra-homecard {
   background-color: white;
   border-radius: 3px;
@@ -96,6 +115,7 @@ div {
   margin-top: 50px;
   padding: 50px 10px;
 }
+
 .mra-social-containers {
   background-color: white;
   border-radius: 3px;
@@ -103,12 +123,14 @@ div {
   margin-top: 25px;
   color: $medium-gray;
 }
+
 .mra-primary-action {
   font-size: 97%;
   color: white;
   background-color: $mra-green;
   border-color: darken($mra-green, 5%);
   border-radius: 2px;
+
   &:hover {
     font-size: 97%;
     color: white;
@@ -117,10 +139,13 @@ div {
     border-radius: 2px;
   }
 }
+
 .mra-portfolio-card {
   &:hover {
     box-shadow: 0 0 15px $border-color;
   }
+
+  border-radius: 5px;
 }
 
 .spacer {
@@ -142,6 +167,7 @@ div {
   /* Declared position allows for location changes */
 
   top: -2px;
+  margin: 0px 4px;
   /* Moves the image 2px closer to the top of the page */
 }
 
@@ -149,7 +175,11 @@ div {
   margin: 15px 0;
 }
 
-.mra-code{
+.mra-code {
   background-color: white;
   color: $medium-gray;
+}
+
+.mra-resume-link-icon {
+  margin-left: 4px;
 }
