--- a/views/portfolio/bronto.html
+++ b/views/portfolio/bronto.html
@@ -18,6 +18,8 @@
 
   <link href="../../css/site.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,300i" rel="stylesheet">
+  <link href="../../../libs/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -46,7 +48,9 @@
             <a href="../portfolio.html">PORTFOLIO</a>
           </li>
           <li>
-            <a href="../resume.html">RESUME</a>
+            <a target="_blank" href="../../files/alcorn_resume.pdf">RESUME
+              <i class="fa fa-external-link mra-resume-link-icon" aria-hidden="true"></i>
+            </a>
           </li>
         </ul>
       </div>
